fixed blogPage.html and styles/media.css files

--- a/pages/blogPage.html
+++ b/pages/blogPage.html
@@ -131,7 +131,9 @@
               <q>Lorem ipsum dolor sit amet</q>, consectetur adipisicing elit. Quo
               illum possimus quisquam animi consequatur sit, fuga cupiditate
               quod.
-              <figcaption>Laudantium, omnis?</figcaption>
+              <figure>
+                <figcaption>Laudantium, omnis?</figcaption>
+              </figure>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
               illum possimus quisquam animi consequatur sit, fuga cupiditate
               quod. Laudantium, omnis? Lorem ipsum dolor sit amet, consectetur
